<package format="2">
  <name>ct_rbd</name>
  <version>0.3.0</version>
  <description>
    Rigid Body Dynamics module of ADRL control toolbox
  </description>
  <maintainer email="neunertm@gmail.com">Michael Neunert</maintainer>
  <maintainer email="markusgft@gmail.com">Markus Giftthaler</maintainer>
  <license>Apache v2</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>ct_core</depend>
  <depend>ct_optcon</depend>
  <depend>cmake_modules</depend>
  <depend>kindr</depend>
 
</package>
