<package format="2">
  <name>ct_rbd</name>
  <version>3.0.2</version>
  <description>
    Control toolbox - rbd module.
  </description>
  <license>BSD-2</license>
  
  <author>Markus Giftthaler</author>
  <author>Michael Neunert</author>
  <maintainer email="markusgft@gmail.com">Markus Giftthaler</maintainer>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>ct_optcon</depend>
  <depend>kindr</depend>

  <exec_depend>catkin</exec_depend>  <!-- ROS compatibility-->

  <export>    <!-- Specify that this is not a ROS package-->
    <build_type>cmake</build_type>
  </export>
</package>

